Update print statement from 'Hello' to 'Goodbye'

--- a/student-dashboard.html
+++ b/student-dashboard.html
@@ -568,7 +568,7 @@
         }
 
         .omr-view-option.selected {
-            background: var(--primary-red);
+            background: var(--success);
             color: white;
         }
 
@@ -1492,5 +1492,6 @@
     </script>
 </body>
 </html>
+
 
 
