Update greeting from 'Hello' to 'Goodbye'

--- a/student-dashboard.html
+++ b/student-dashboard.html
@@ -563,7 +563,7 @@
         }
 
         .omr-view-option.wrong {
-            background: var(--danger);
+            background: var(--primary-red);
             color: white;
         }
 
@@ -1492,6 +1492,7 @@
     </script>
 </body>
 </html>
+
 
 
 
