Update print statement from 'Hello' to 'Goodbye'

--- a/student-dashboard.html
+++ b/student-dashboard.html
@@ -558,7 +558,7 @@
         }
 
         .omr-view-option.correct {
-            background: var(--success);
+            background: var(--primary-red);
             color: white;
         }
 
@@ -1492,6 +1492,7 @@
     </script>
 </body>
 </html>
+
 
 
 
